keegan.css
html {
  background: url('./Images/blueInkF.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.mainWrapper {
  display: flex;
  justify-content: flex-end;
}

.homeWrapper {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 20rem;
  right: 5rem;
  color: #0148A4;
  font-family: 'Josefin Sans';
  width: 48%;
}

.socialContainer {
  font-size: 2rem;
  text-align: center;
}

.icon {
  margin-right: 30px;
  color: #0148A4;
  transition: all 1s;
}

.icon:hover {
  color: #00FF7F;
  transition: all 1s;
}

.title {
  font-size: 4rem;
  font-weight: 400;
  margin: 0;
  text-align: center;
}

.subTitle {
  font-size: 1.5rem;
  font-weight: 300;
  text-align: center;
}

.blogTitle {
  color: #0148A4;
  font-size: 3rem;
}

nav {
  display: flex;
}

nav p {
  margin-right: 5%;
  font-size: 2rem;
}

a {
  text-decoration: none;
  color: #0148A4;
  transition: all 1s;
}

a:hover {
  color: #00FF7F !important;
  transition: all 1s !important;
}

a:visited {
  color: #0148A4;
  transition: all 1s;
}

.blogPost {
  color: #0148A4;
}

.profileImg {
  width: 18rem;
  border-radius: 50%;
}

.imgWrapper {
  text-align: center;
  margin-top: -10%;
}

.blogWrapper {
  display: flex;
  justify-content: flex-end;
}

#blogContainer {
  display: flex;
  flex-direction: column;
  width: 50%;
  margin-right: 5%;
  text-align: center;
  font-family: 'Josefin Sans';
}

.blogPost {
  border-bottom: 1px solid #0148A4;
}

.sideNav {
  flex-direction: column;
  position: fixed;
  left: 0px;
  top: 15rem;
  margin-left: 2%;
  font-family: 'Josefin Sans';
  font-weight: 600;
}

.links {
  color: white;
}

.links:visited {
  color: white;
}

.homeNav .links {
  font-size: 2.5rem;
  margin: 5px;
}

.homeNav p {
  margin: 30px;
}

.homeNav {
  top: 22rem;
}



@media (max-width: 820px) {
  .sideNav {
    position: fixed;
    top: 0px;
    display: flex;
    flex-direction: row;
    background: white;
    width: 100%;
    justify-content: space-around;
  }

  .links {
    color: #0148A4;
    font-size: 1rem;
  }

  .links:visited {
    color: #0148A4;
  }

  #blogContainer {
    margin-top: 100px;;
    width: 100%;    
  }

  .blogWrapper {
    display: flex;
    flex-direction: column;
  }

  .homeNav p {
    margin: 0 0 0 0;
    text-align: center;
  }

  .homeNav a.links {
    font-size: 1.5rem;
  }

  .mainWrapper {
    display: flex;
    flex-direction: column;
  }
  .homeWrapper {
    margin: 0;
    width: 100%;
    position: none;
    right: 0px;
  }

  .title {
    text-align: center;
  }

  nav.sideNav p {
   margin: 0px; 
  }

}

